Refactor project controller to DTO